plparse: Fix invalid check of non-dereferenced pointer against NULL

g_strsplit() guarantees to return a non-empty array. line is set to
lines+1, so can never be equal to 0 (i.e. NULL). It needs to be
dereferenced first to check for the array delimiter.

Coverity issue: #60477

https://bugzilla.gnome.org/show_bug.cgi?id=730365